--- a/src/view/position.fxml
+++ b/src/view/position.fxml
@@ -6,8 +6,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="500.0" prefWidth="700.0">
+<VBox prefHeight="500.0" prefWidth="700.0"
+      xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
+      fx:controller="controllers.PositionController" >
+    <children>
+        <AnchorPane prefHeight="90" prefWidth="600.0" styleClass="component__toolbar">
 
-</AnchorPane>
+            <Button fx:id="update" layoutX="10.0" layoutY="10.0" text="Обновить" contentDisplay="CENTER"/>
+
+        </AnchorPane>
+        <TableView fx:id="tablePosition" prefHeight="470.0" prefWidth="600.0" GridPane.rowIndex="1">
+            <columns>
+                <TableColumn fx:id="name" prefWidth="600.0" text="Название"/>
+            </columns>
+        </TableView>
+    </children>
+</VBox>
