--- a/src/view/department_form.fxml
+++ b/src/view/department_form.fxml
@@ -10,8 +10,7 @@
 <VBox
         xmlns:fx="http://javafx.com/fxml"
         prefWidth="400.0"
-        prefHeight="200.0"
->
+        prefHeight="200.0">
     <padding>
         <Insets top="15" right="15" bottom="15" left="15"/>
     </padding>
@@ -23,10 +22,8 @@
             </padding>
 
             <children>
-
-                <Label text="Название категории" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                <TextField fx:id="name" styleClass="name-field" prefHeight="20.0" prefWidth="185.0"
-                           promptText="Введите название"/>
+                <Label text="Название отдела" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                <TextField fx:id="name"  prefHeight="20.0" prefWidth="108.0" promptText="Введите название"/>
             </children>
 
         </VBox>
@@ -38,25 +35,22 @@
 
             <children>
                 <Label text="Тип" GridPane.columnIndex="1" GridPane.rowIndex="2" layoutY="40"/>
-                <TextField fx:id="type" prefHeight="25.0" prefWidth="185.0" promptText="Введите тип"/>
+                <TextField fx:id="type" prefHeight="30.0" prefWidth="285.0" promptText="Введите тип"/>
             </children>
         </VBox>
 
         <VBox>
             <padding>
-                <Insets bottom="20" />
+                <Insets bottom="20"/>
             </padding>
 
             <children>
-            <ComboBox fx:id="category" layoutX="9.0" layoutY="38.0" prefHeight="25.0" prefWidth="174.0" promptText="Категория"
-                      styleClass="combo-box"/>
+                <ComboBox fx:id="comboBox" promptText="Категория" prefWidth="300.0" styleClass="combo-box"/>
             </children>
         </VBox>
 
         <Button fx:id="saveBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0"
                 text="Save" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
-
-
     </children>
 
 </VBox>
